# Nova-Language

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  bootstrap_test.nova  cmake_install.cmake  index.html  install.ps1  install.sh  nova  self_host.nova  style.css
advanced_ai_core/: ai_core.cpp  ai_core.h
ai_core/: index.html
analytics/: nova_telemetry.cpp  nova_telemetry.h
blockchain_web3/: nova_web3.cpp  nova_web3.h
community/: index.html
compiler/: bytecode.cpp  bytecode.h  lexer.cpp  lexer.h  main.cpp  nova_bootstrap.nova  parser.cpp  parser.h
deployment/: nova_deploy.cpp  nova_deploy.h
developers/: index.html
docs/: build_master_docs.nova  index.html  nova_docgen.cpp  nova_docgen.h  nova_manual.md
downloads/: index.html
ecosystem/: index.html
enterprise/: index.html
full_stack_dev/: hyperweb.cpp  hyperweb.h
game_engine/: nova_game.cpp  nova_game.h
graphics/: nova_graphics.cpp  nova_graphics.h
installer/: install_nova.sh
networking/: nova_network.cpp  nova_network.h
operating_system_layer/: j_kernel.cpp  j_kernel.h
overview/: index.html
package_ecosystem/: nova_pm.cpp  nova_pm.h
physics_engine/: nova_physics.cpp  nova_physics.h
pro/: index.html
quantum/: index.html
robotics/: index.html
robotics_control/: robot_core.cpp  robot_core.h
runtime/: ffi.cpp  ffi.h  vm.cpp  vm.h
security/: index.html  nova_security.cpp  nova_security.h
system_logs/: nova_logger.cpp  nova_logger.h
testing/: nova_test.cpp  nova_test.h
tooling/: nova_tools.cpp  nova_tools.h
ui/: nova_ui.cpp  nova_ui.h
(+21 files in other folders)
